--- a/research/Experiments.ipynb
+++ b/research/Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "id": "d803dea7",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "id": "cece9c44",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "44eb00cf",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
